feast: inspect a network
